--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,6 @@
     <string name="app_name">NfcSample</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_nfc_tag_viewer">NfcTagViewer</string>
+    <string name="title_activity_nfc_react">NfcReact</string>
 
 </resources>
