--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
 
     <string name="app_name">NfcSample</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_nfc">Hello NFC!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_nfc_react">NfcReact</string>
     <string name="title_activity_nfc_writer">NfcWriterActivity</string>
+    <string name="title_activity_nfc_receive">NfcReceiveActivity</string>
 
 </resources>
